dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4)
AM_INIT_AUTOMAKE(ggz-grubby, 0.0.5)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Compiling Options
dnl =====================
AC_ARG_ENABLE(perl,  [  --disable-perl        Exclude perl modules],, enable_perl=yes)
AC_ARG_ENABLE(ruby,  [  --disable-ruby        Exclude ruby modules],, enable_ruby=yes)

dnl Check for standard build environment
dnl ====================================
AC_PROG_CC
AC_ISC_POSIX
AC_PROG_INSTALL
AM_PROG_CC_STDC
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl GGZ checks
dnl ==========
AC_GGZ_GGZCORE

dnl Use -Wall if we have gcc.
dnl ========================
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl


dnl Module options
dnl ===========
if test "$enable_perl" = yes; then
	foo=1;
fi

if test "$enable_ruby" = yes; then
	bar=1;
fi

dnl Create files
dnl ============

if test "x$prefix" = "xNONE"; then
	prefix="/usr/local"
fi

grubbydir="${prefix}/share/grubby"
grubbymoddir="${prefix}/lib/grubby"

AC_DEFINE_UNQUOTED(GRUBBYDIR, "${grubbydir}")
AC_DEFINE_UNQUOTED(PREFIX, "${prefix}")

AC_SUBST(grubbymoddir)
AC_SUBST(grubbydir)

AC_OUTPUT(Makefile
		grubby/Makefile
		grubby/src/Makefile
		grubby/modules/Makefile
		grubby/data/Makefile
		grubby/data/grubby-config
		man/Makefile)

