dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in 4723 2002-09-26 11:20:39Z dr_maux $

AC_INIT(ggz-gtk/main.c)
AM_INIT_AUTOMAKE(ggz-gtk-client, 0.0.6pre)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Check for standard build environment
dnl ====================================

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_INSTALL
AM_PROG_CC_STDC
AC_PROG_MAKE_SET


dnl Compiling Options
dnl =================
AC_ARG_ENABLE(debug,           [  --disable-debug         Disable debugging ],, enable_debug=yes)
AC_ARG_ENABLE(debug-gdb,       [  --enable-debug-gdb      enable GDB debugging ],,enable_debug_gdb=no)


dnl Check for GGZ Requirements
dnl ==========================
AC_GGZ_INIT(defaults, export)
AC_GGZ_GGZCORE
AC_GGZ_LIBGGZ
AC_GGZ_INTL(ignore)


dnl Check for header files
dnl ======================
AC_HEADER_STDC

subdirs="ggz-gtk man"


dnl Check for NLS
dnl ============================================================
if test "x$MSGFMT" != "x"; then
	AC_DEFINE(ENABLE_NLS)
	allsubdirs="$subdirs po"
	enable_gettext="yes"
	if test "x${prefix}" = "xNONE"; then
		AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/share/locale")
	else
		AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/share/locale")
	fi

else
	allsubdirs="$subdirs"
	enable_gettext="no"
fi

dnl Check for typedefs, structures, and compiler characteristics
dnl ============================================================
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME


dnl Check for library functions
dnl ===========================

AM_PATH_GTK(1.2.0,, AC_MSG_ERROR(*** Can't build GTK frontend: GTK not found))


dnl Use -Wall if we have gcc.
dnl =========================
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl


dnl Debug modes
dnl ===========
dnl This defines either DEBUG or NDEBUG.  We could provide a third option
dnl where neither are defined.
if test "$enable_debug" = yes; then
    AC_DEFINE(DEBUG)
    DFLAGS="DEBUG"
else
    AC_DEFINE(NDEBUG)
    DFLAGS="NDEBUG"
fi

if test "$enable_debug_gdb" = yes; then
    CFLAGS="$CFLAGS -ggdb"
fi

dnl Various dirs
dnl ============

if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    ggzdatadir="${ac_default_prefix}/share/pixmaps/ggz"
  else
    ggzdatadir="${prefix}/share/pixmaps/ggz"
  fi
else
  ggzdatadir=${datadir}
fi


AC_DEFINE_UNQUOTED(GGZDATADIR, "${ggzdatadir}")

SUBDIRS=$allsubdirs
AC_SUBST(LDADD)
AC_SUBST(SUBDIRS)
AC_SUBST(ggzdatadir)

AC_OUTPUT([Makefile 
	   ggz-gtk/Makefile
	   po/Makefile
	   man/Makefile
	   ])


dnl Status Output
dnl =============
echo ""
echo "Options"
echo "    General Debugging..$enable_debug"
echo "    GDB Debugging......$enable_debug_gdb"
echo "    Gettext support....$enable_gettext"
echo ""
echo "At the prompt type \"make\" to compile the GGZ gtk client"
echo ""
echo "When complete, su to root and type \"make install\" to"
echo "install the software."
echo ""

