SUBDIRS = common chess chinese-checkers combat dots ggzcards hastings reversi spades tictactoe po

EXTRA_DIST = README.GGZ QuickStart.GGZ \
		m4/gettext.m4	\
		m4/ggz.m4	\
		m4/ggz-debug.m4	\
		m4/glibc21.m4	\
		m4/gtk-2.0.m4	\
		m4/iconv.m4	\
		m4/lcmessage.m4	\
		m4/locale.m4	\
		m4/mkdir.m4	\
		m4/progtest.m4

